--- a/data/squad.yml
+++ b/data/squad.yml
@@ -20,4 +20,13 @@ members:
   jm:
     tasks: "None"
   og:
-    tasks: "None"
+    tasks:
+      G-001:
+        date-submitted: "03/05/2021"
+        date-complete: "03/01/2021"
+      G-002:
+        date-submitted: "03/05/2021"
+        date-complete: "03/01/2021"
+      G-003:
+        date-submitted: "03/05/2021"
+        date-complete: "03/01/2021"
