--- a/data/squad.yml
+++ b/data/squad.yml
@@ -8,7 +8,19 @@ members:
         #   date-submitted: "10/01/2021"
         #   date-complete: "11/01/2021"
   es:
-    tasks: "None"
+    tasks:
+      G-001:
+        date-submitted: "05/05/2021"
+        date-complete: "05/05/2021"
+      G-002:
+        date-submitted: "05/05/2021"
+        date-complete: "05/05/2021"
+      G-003:
+        date-submitted: "05/05/2021"
+        date-complete: "05/05/2021"
+      G-004:
+        date-submitted: "05/05/2021"
+        date-complete: "05/05/2021"
   sn:
     tasks: "None"
   tj:
@@ -18,15 +30,27 @@ members:
   aa:
     tasks: "None"
   jm:
-    tasks: "None"
+    tasks:
+      G-001:
+        date-submitted: "03/05/2021"
+        date-complete: "03/05/2021"
+      G-002:
+        date-submitted: "03/05/2021"
+        date-complete: "03/05/2021"
   og:
     tasks:
       G-001:
         date-submitted: "03/05/2021"
-        date-complete: "03/01/2021"
+        date-complete: "03/05/2021"
       G-002:
         date-submitted: "03/05/2021"
-        date-complete: "03/01/2021"
+        date-complete: "03/05/2021"
       G-003:
         date-submitted: "03/05/2021"
-        date-complete: "03/01/2021"
+        date-complete: "03/05/2021"
+      G-004:
+        date-submitted: "05/05/2021"
+        date-complete: "04/05/2021"
+      G-005:
+        date-submitted: "05/05/2021"
+        date-complete: "04/05/2021"
